--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,89 @@
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
 }
 
 body {
-    background-color: rgb(221, 221, 221);
-    font-family: Arial, sans-serif;
+  background-color: rgb(221, 221, 221);
+  font-family: 'Arial', sans-serif;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 50px;
-    background-color: black;
-    box-shadow: 0 0 10px black;
-    padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  background-color: black;
+  box-shadow: 0 0 10px black;
+  padding: 0 20px;
 }
 
-h1 {
-    color: white;
+.logo {
+  color: white;
+  letter-spacing: -3px;
+  text-transform: lowercase;
+}
+
+.logo span:first-child {
+  color: #1d52ff;
+}
+
+.logo span:last-child {
+  font-size: 12px;
+  letter-spacing: normal;
 }
 
 .menu {
-    display: flex;
+  display: flex;
 }
 
-.menu li {
-    position: relative;
+.menu > li {
+  position: relative;
 }
 
-.menu li a {
-    padding: 16px;
-    color: white;
-    font-size: 14px;
-    text-decoration: none;
-    display: block;
+.menu > li a {
+  padding: 17px;
+  color: white;
+  font-size: 14px;
+  text-decoration: none;
+  display: block;
 }
 
 .menu > li:hover {
-    background: #1d52ff;
+  background: #1d52ff;
 }
 
-.menu > li:hover > .submenu, .submenu > li:hover > .submenu {
-    display: block;
+.menu > li:hover > .submenu,
+.submenu > li:hover > .submenu {
+  display: block;
 }
 
 
 .submenu {
-    display: none;
-    position: absolute;
-    top: 49px;
-    left: 0;
-    background: #3276fb;
-    min-width: 100%;
+  display: none;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  background: #3276fb;
+  min-width: 110%;
 }
 
 .submenu li:hover {
-    background: #174fbe;
+  background: #174fbe;
 }
 
 .submenu li {
-    position: relative;
+  position: relative;
 }
 
 .submenu li .submenu {
-    top: 0;
-    left: 100%;
+  top: 0;
+  left: 100%;
 }
